Add Lecture 5 MCP materials and attribution notes
- Add Lecture 5 (Model Context Protocol) notebook to Resources/Lecture5_Yuan-Sen_Ting/
- Add attribution and Zenodo citation to Lectures 2, 3, and 5 notebooks
- Update index.html with Lecture 5 card and attribution notes for Lectures 2, 3, 5
- Correct citation format to match official BibTeX (removed OSU, kept only Zenodo as publisher)

--- a/Resources/Lecture2_Yuan-Sen_Ting/LLM_API_Basics_STIG.ipynb
+++ b/Resources/Lecture2_Yuan-Sen_Ting/LLM_API_Basics_STIG.ipynb
@@ -20,7 +20,15 @@
     "- Build multi-turn conversations and manage context\n",
     "- Implement prompting strategies for research tasks\n",
     "- Work with vision models for astronomical image analysis\n",
-    "- Handle rate limits and errors in production code"
+    "- Handle rate limits and errors in production code\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Attribution:**  \n",
+    "This material is adapted from [*Coding Essentials for Astronomers*](https://tingyuansen.github.io/coding_essential_for_astronomers/) by Yuan-Sen Ting.\n",
+    "\n",
+    "**Citation:**  \n",
+    "Ting, Y.-S. (2025). *Coding Essentials for Astronomers*. Zenodo. [DOI: 10.5281/zenodo.17850426](https://doi.org/10.5281/zenodo.17850426)"
    ]
   },
   {
