--- a/Resources/Lecture3_Yuan-Sen_Ting/LLM_Function_Tools_RAG_STIG.ipynb
+++ b/Resources/Lecture3_Yuan-Sen_Ting/LLM_Function_Tools_RAG_STIG.ipynb
@@ -19,7 +19,15 @@
     "- Master Retrieval Augmented Generation (RAG) for document-based Q&A\n",
     "- Implement document chunking and embedding-based search\n",
     "- Combine function tools with RAG for powerful research assistants\n",
-    "- Understand vector databases for production RAG systems"
+    "- Understand vector databases for production RAG systems\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Attribution:**  \n",
+    "This material is adapted from [*Coding Essentials for Astronomers*](https://tingyuansen.github.io/coding_essential_for_astronomers/) by Yuan-Sen Ting.\n",
+    "\n",
+    "**Citation:**  \n",
+    "Ting, Y.-S. (2025). *Coding Essentials for Astronomers*. Zenodo. [DOI: 10.5281/zenodo.17850426](https://doi.org/10.5281/zenodo.17850426)"
    ]
   },
   {
